# ChangeLog for www-client/chromium
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.989 2013/11/20 21:34:47 phajdan.jr Exp $

*chromium-33.0.1711.3 (20 Nov 2013)

  20 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +chromium-33.0.1711.3.ebuild, metadata.xml:
  Dev channel bump. Fix bug #491230 by Andrew Waters. Add aura USE flag.

  17 Nov 2013; Mike Gilbert <floppym@gentoo.org>
  +files/chromium-build_ffmpeg-r0.patch, chromium-32.0.1700.14.ebuild,
  chromium-33.0.1707.0.ebuild:
  Fix detection of x86 HOST_OS when configuring ffmpeg, bug 491466. Thanks to
  megabaks for the the solution.

  16 Nov 2013; Agostino Sarubbo <ago@gentoo.org> -chromium-31.0.1650.48.ebuild:
  Remove old

  16 Nov 2013; Agostino Sarubbo <ago@gentoo.org> chromium-31.0.1650.57.ebuild:
  Stable for x86, wrt bug #491326

  16 Nov 2013; Agostino Sarubbo <ago@gentoo.org> chromium-31.0.1650.57.ebuild:
  Stable for amd64, wrt bug #491326

  16 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-32.0.1700.14.ebuild, chromium-33.0.1707.0.ebuild:
  Reconfigure bundled ffmpeg to enable build with gcc-4.5, bug #491378 by
  Ulrich Fieseler.

*chromium-31.0.1650.57 (16 Nov 2013)

  16 Nov 2013; Mike Gilbert <floppym@gentoo.org> +chromium-31.0.1650.57.ebuild:
  Stable channel bump.

*chromium-32.0.1700.14 (15 Nov 2013)

  15 Nov 2013; Mike Gilbert <floppym@gentoo.org> +chromium-32.0.1700.14.ebuild,
  -chromium-32.0.1700.2.ebuild:
  Beta channel bump.

  15 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-32.0.1700.6.ebuild, chromium-33.0.1707.0.ebuild:
  Add dependency on sys-libs/libcap, bug #491236 by Michael Kurinnoy.

*chromium-33.0.1707.0 (13 Nov 2013)

  13 Nov 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-gnome-keyring-r0.patch, -chromium-30.0.1599.101.ebuild,
  -chromium-31.0.1650.39.ebuild, +chromium-33.0.1707.0.ebuild:
  Dev channel bump. Remove old.
