@@ -8,6 +8,6 @@ KEYWORDS=~amd64 ~arm ~x86
 LICENSE=BSD
 RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= system-sqlite? ( dev-db/sqlite:3 ) cups? ( dev-libs/libgcrypt:= >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= >=dev-libs/icu-49.1.1-r1:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.14.3:= >=dev-libs/protobuf-2.5.0:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/gnome-keyring-2.28.2:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/harfbuzz:=[icu(+)] >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= media-libs/opus:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= >=sys-libs/libcap-2.22:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/gtk+:2= >=x11-libs/libXi-1.6.0:= x11-libs/libXinerama:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-chromium ) !=www-client/chromium-9999 x11-misc/xdg-utils virtual/ttf-fonts
 SLOT=0
-SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1700.6.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1700.6-testdata.tar.xz )
+SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1700.19.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-32.0.1700.19-testdata.tar.xz )
 _eclasses_=chromium	cb805b418b1d27c585f6b2a3321d19ee	eutils	4878e7f88afc0ba0866ac112190b0fd4	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	65cef1287b9d62b1a0f180765d1e0c69	gnome2-utils	b66c7c3889d2dd0913e9f3d2ac1c0859	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	pax-utils	2424f959506320f5196de8f79fa05297	portability	536c5e70c5fb252ed3b769e04aa3f05b	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=191062789734218b2bebe4a4f42a2fe0
+_md5_=a22698bf16709aaa86fee9010bbbab47
