@@ -21,24 +21,24 @@ DIST chromium-31.0.1650.57-testdata.tar.xz 111204896 SHA256 d929bc500d121784e99e
 DIST chromium-31.0.1650.57.tar.xz 174517316 SHA256 89fe1ea38754c3d39bbd068313336a4467e7111854d8e14cc51bc2435c7667f7 SHA512 0f6fa6c72122bfd9dce0344c434151ae0ee24428bea56da209a761f59edf1fc33760211857ee138030a8693d4849872a8f826a1b8e13970fa482797896cd1d54 WHIRLPOOL 623ab00eb8010b9edfc866f4510b8990f57c32e1f64f8e6a7558c99717812980c2ceba2c532b81aab9bd5fc4bb94c326d192c694b0befe694ae60679f5134c3a
 DIST chromium-32.0.1700.14-testdata.tar.xz 112140768 SHA256 e36056a1d2bda2447aacf18c4abc7001b871ad20b3f46b75ed9494a51b5f042b SHA512 e205469cac2211677bedaaaf4b69c856001425372034fc7f8cd40bb04a6c94a2bc5790ef7dabfaf9e21796bce0085b15e56643052d8401064be4827d4b7f28a3 WHIRLPOOL 66c2bab7e924e9c4787cbc2387c18d3de3ca5cc4a693f76b5c68f0edaa45cc70803e1301597e68024dd6f72afe3d9284a92dc523c50748b333360f4c8ef38061
 DIST chromium-32.0.1700.14.tar.xz 177159364 SHA256 26a88b0df0160bf99988ef04bb7b357777a352469d97043960958a357f065d74 SHA512 a5e39b12138000b984a71239956178a52288ece10ff2d3db2cb08295a2bdcd635fbb20bcbd56a490130b7a0c1ae4da520f15d038a7a042a68db359e5c922ccd9 WHIRLPOOL 4f98346a2763a2591e6dd90b6ed378438e0e79d43be34c6ec465a6dc7a6b3bbd6786a2eeb206a70e4f50e70120be557d53522ba8696635809b5d01959bf2e187
-DIST chromium-32.0.1700.6-testdata.tar.xz 112081404 SHA256 edce045b0d46a1ec480d5d42cc03ae8f2a3634e549f671b4a248b1c8d93f9263 SHA512 5f111cc4b5ecdf32912212a399e235be486127b3f3ceb118011c88a76bf757b1a091080784cb6ce761d1a22f94dff1a4ad1f800dfca2b88bbe277b56d01bc7c3 WHIRLPOOL 8fb98a46eccb30b525071c17627b29a6169c12df1d3fa0a53bfa6ab73857bfdd4b354ee328eed9955f0635e192df9373b1404969dfb2839981b0587269f25e88
-DIST chromium-32.0.1700.6.tar.xz 176963440 SHA256 cbd1bfc5bc1bc3f3f8d57828097bd7f4d2fdacb0658a140871af63bb705c0a2c SHA512 e6e0e1d60b44796d281bfd3210f4e363d5c80fb884cde7bd96375c2013a03dc3a5ce6087a41571320fe1c2c149232ca39980cf08e9f526698570a0cbaa6b66ea WHIRLPOOL 5045211ff518f13cdb2ff42b9f2e07ddcbb9885e9986e4e8b276ce75a7da414ffa94b502f764106ef0dd56f34a13b46bd84a32e8790dc9692712ef3f3dbec798
+DIST chromium-32.0.1700.19-testdata.tar.xz 112139100 SHA256 459b16cc254ac4206b93750a44a1dda7fc8e5c72bcf69293f372b53b641b37c1 SHA512 bed3cda8be8408ea85ce84afff8cd4a86b4fd6ccb16e8e912ef2e17f9f6465e3045071c58bad570d04b70c7c0bb8beba235c07c3b53a8e3059998fd770cf3886 WHIRLPOOL 4028b4f6b0ec8052db5ba50434d2c96959085c0dc68dac23f025b51699ede14fc15f791bdd4a6e8a69c5ef9a04c9c90acb956558ccde558ed5f10a1e769898c3
+DIST chromium-32.0.1700.19.tar.xz 177174300 SHA256 4510e628f51aa79bbb9723359b3484f82660cfec6f1035c521cf5f60827f1334 SHA512 415ac663e0c90dc04cb87075de4d7399fa4eeae6f4f0ba81cfb13b7f4337277a75feb39ab74c719ead6b0f8ab81bee35157ea980d788d93735a9a76ab9222150 WHIRLPOOL d8c979c225d6ffaa98ebcf2f0d514b54b8054cfbb78e02c66dd8319311300ce086c50a5e48ee5ac4177f2b35b3569c7108c7c8ffa06cf4296ac15db629cb20a9
 DIST chromium-33.0.1707.0-lite.tar.xz 154007504 SHA256 3dafd652ddc1c49f5d0594fe72502e8d5772b6065e53b100f2b2d126313f17f0 SHA512 b0b4e793e0752946543a09313d43f008ea43527f96d7527f8beaf2073227fcee2758ecc32d476017cf752aaabe8e653d7ebdb55a3ecd4458793e2d6c312ee3f4 WHIRLPOOL f1c647a07039e0a5bdf2b886348298ebbadaf7900c8bde2543677af0ffc617f3ff99cd10a98aa2fddba990bcfbaab372b70c16ef06f83bea3a153f1079291518
 DIST chromium-33.0.1707.0-testdata.tar.xz 112156276 SHA256 f36782ffd0c56dcc00f316b8267471e40afa72a37be1fa306a7ee20f5b9b4485 SHA512 dffe4cd94a32de09774abfdb3d46da401446416f0846a3498043951ffb7cc7f7279b11be67d2f300c109f3f7337a5c61f2558b4639e9a19b78a54bd375629e83 WHIRLPOOL d6d404a91c7a5118a8f61fe29c9677655cb411b27df38a8b7d450160161adfc39fffb1ff0755b8d3347147d3e30016f9bad8a2857b908d4d176bb1e3e1bdedb1
 DIST chromium-33.0.1711.3-lite.tar.xz 154323924 SHA256 bf87201a4a1e5fa751137af379b81c10dbc8a99a0bc4a47138f6dcdaaccf8fa8 SHA512 78aa4ac3a183caa4f3530ed3771bf381ca59f80bd2e272f2c8b7afaec4d1b6f00ba0f5e07c5282ec773cc55b4b25df78e41c8371f0e1bbea55ab76a7cacf2dd7 WHIRLPOOL 5da3217a895aac4fc1eb0e3edac2dc0c33b177fd450f74d63959e47a48d43c4608d0afde69e86a6e144685b0ffb2ab943538c36c6db4a784c521caacf9bd2502
 DIST chromium-33.0.1711.3-testdata.tar.xz 112144684 SHA256 0f2403405ed53669c4f9af19883f392ee44e90cdcf048d4be8bcf6d08f32b1a0 SHA512 c801ff9ed47fbe1d63d4bc6361e806904e17335eea32164c937e31d6f5313153fc23455bc28dcf98cc519b93cf07fbbd8c746b99b77961b21c2df16f4347b93d WHIRLPOOL ae7120e8debc4aa9e7f3fc09af85840a520f674fb807351067b6bce6d5d4c92a20e479bbafadf037a49619ef2b2e339382e98a69add818e286917acf9f96bfc6
 EBUILD chromium-31.0.1650.57.ebuild 17190 SHA256 b7c0d8f2a1777c61e17b19478687eeada111019542ebfa49fac6b586745304cd SHA512 93d559a47f41a5477e6f7997c085d7b7f37ccdb09472dc6c594e1b30d3eb7ffc66cb5c24f23449661cb8c955a77a0907f3b929a5e81c14f5457ca13373a2486c WHIRLPOOL 8fac2cbede89d2499a2826a7515b2844cc0726b878fc28fc503af60136cb111ddbc6682fc9bf54a2adfc1c6a38fee31434264326f537ecc044942cea94e73741
 EBUILD chromium-32.0.1700.14.ebuild 18274 SHA256 d378995c718f4a7fc1d63d36d8c626e551700767d337f0286a6426fe66a13d6f SHA512 7db7451380e7a912251e711e8cabfc886381a604ba66fb3ae3481c412d4594f2d7913a93dd13afdcec9c887aa1ca9988fa6b68240c81c9f5f81d280dfcca941b WHIRLPOOL a2864f142599682c1ed67bcf1d82c40b7bd288451c4ae6ad7dca2918cf6397f2511c4dbd483b6e80e733dee870ccb18dded57559386584271082c56a94bbdd41
-EBUILD chromium-32.0.1700.6.ebuild 17891 SHA256 85d0063e184f892121e29c9b146b4f68b388e465c662297a8415e30e0cc8ab35 SHA512 05f41f85fe667d8419d4b87488947d918beb5c86254f676c95c935d7966e54c31135ad4266f1cd3b11c3d64805f0e75b9dc1d1615998097b5d4f306897cfcddd WHIRLPOOL dc6d482246775534b6f4018b9ba511e97c1c789256d8bd3f26711f0049b0fd44996736c356f657817ccc677c6a21703ae8f3aad41f0e130a0329c8b244a2a209
+EBUILD chromium-32.0.1700.19.ebuild 18225 SHA256 f4c821428e27e799a250e118132193e1fe01edc9977b6a6525cc9f69ebbbc23f SHA512 9b51e41dd3835e3862640c7082ab2448d2b6b961f646e521ac53e37562a0e5de85fc13a6866a012ac51da2b37020f37fdb8396dfd34b82a1da3b38f4e6d583c2 WHIRLPOOL 09ab7072a2a54c0270431b031fb9b064d33cef48cbb0d0cd69ebe274a0f703ff239999ecfa575d0ecade7d00efeedb223289c3b466ce6d84e48730feebc24853
 EBUILD chromium-33.0.1707.0.ebuild 18306 SHA256 9ed9b87566184676750e6e84fa19edc32a2b7a2814ad38f4235a0286eeadd28a SHA512 e6c9586268162b3c9ef9eb2c9a5a9b4b2e14d2859703618ea354e1a3f144f5d8066c5aec9846225583b0be412e590a2b4eb62c793cbb210b1fddd94436c8bd9f WHIRLPOOL 3432e6f2522a98b282049f0fb00b52c4e3bdc60e22d8af930341dedd6db198bc997f035777078bfecc9e49cf8b216e3240409088047789e483da57f6e357a58c
 EBUILD chromium-33.0.1711.3.ebuild 18281 SHA256 871e974f646ae081d1c9eab2e68c07a6e4ed2e9d3db1c5a908cfc51c5d7f53ca SHA512 0a36e19b7a4fd91f1504fe8403d7c0dbf168c83f960f32fcd57e0a4e427146d3924604292d4a5518d12ce29f0c7b865975ba6a330d201896e4309bb737646b36 WHIRLPOOL c591f39eaa40e5dd7120ade0f7b3d0931579e2324c93fd364313b84cb511e67c9b944dd90d197844b2d2431775a0207157d13f6afd6759b9076b2d70822aa33f
-MISC ChangeLog 90328 SHA256 63e2503a818a6235ab6bc17bd8d427852609b6a7c64bd160b76369e9b133ef09 SHA512 91ba968e2647d157e72e7c4b4a0b66ffd14e3ed6446eb4fef562e73e7f86878b8209e7f66a9eb1fd48a44ba7b25756e1fc2950248baa5664ada2bcfca52d509d WHIRLPOOL 6583900220cf2337306e35f69df491a0bea46631219d4cfa125c7e788f2b9db85bf55cc91a33251703db6a8b74952a2d984c884f8f02be8ac9042fe292c75fe0
+MISC ChangeLog 90497 SHA256 235b501bc92f5462c449d4c04e4ab9bd735e48c1c66d12ee5ccb61edb3954886 SHA512 8826ae40fc237ae7fc9d9a172045fea08fdddf45612e56745c50e83a56e70d111983f6baaf7433161e0d101f23a0a3414561c87248fd4f1f1961016b4cd57a04 WHIRLPOOL d9c472275851e252e371650d1681785474bf4af0e2705ce30936d9d697a8ddc56ccae549d6b9c3de863015a23d739de45c704f70441020d6b2f8bfe1f4819c34
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 786 SHA256 12e03b633076f7fdf1fb7b3a3a2c10c0a4210566511101d6df5e18d962680c6d SHA512 cc2fdf94c85a24d528d921890d1828341b173b5b2daba820b1ddcf973890ee950e2fe9e096d81106196e9ca761908141b0aac88330b68b536a8b39bf29c1c868 WHIRLPOOL 101c01d630f4460c1f23ea9e2334e9509839cc2c968af254f40489680dffd59942e21f6040fc4d127abc6cae82ece031bbbb3f08b325a8e8835f80c322c2948c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKNKwQACgkQuUQtlDBCeQKhNACeMTJqXDcPH+AoVPdQZ/xwmIVo
-8fcAoIe7QBB+CtrTC+G0tVgEQZh38LiV
-=OynM
+iF4EAREIAAYFAlKNgKQACgkQC77qH+pIQ6TPcwD9GRfuPZiY33MXMNGYVsluVFJE
+GVFm9gt3v2/L/BeoQbgBAJD1Vm2xcQ8+NllnxSDdnkXqfMch91gyXtjRvxnU1gIt
+=6lWC
 -----END PGP SIGNATURE-----
