@@ -1,6 +1,12 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.989 2013/11/20 21:34:47 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.990 2013/11/21 03:40:12 floppym Exp $
+
+*chromium-32.0.1700.19 (21 Nov 2013)
+
+  21 Nov 2013; Mike Gilbert <floppym@gentoo.org> +chromium-32.0.1700.19.ebuild,
+  -chromium-32.0.1700.6.ebuild:
+  Beta channel bump.
 
 *chromium-33.0.1711.3 (20 Nov 2013)
 
